replace enableVNC caps

--- a/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
+++ b/Aquality.Selenium/src/Aquality.Selenium/Resources/settings.json
@@ -8,7 +8,10 @@
     "chrome": {
       "webDriverVersion": "MatchingBrowser",
       "capabilities": {
-        "enableVNC": true,
+        "selenoid:options": 
+        { 
+            "enableVNC": true 
+        },
         "unhandledPromptBehavior": "default"
       },
       "options": {
