* The old implementation has been removed for relative locators; * A custom page has been added for testing relative locators; * A new interface and implementation class has been created for working with relative locators;

--- a/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
+++ b/Aquality.Selenium/tests/Aquality.Selenium.Tests/Aquality.Selenium.Tests.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Resources\LoginFormForRelativeLocators.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\settings.azure.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
