--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,7 +2,7 @@ trigger:
 - master
 
 pool:
-  vmImage: 'windows-2019'
+  vmImage: 'windows-latest'
   
 variables:
   buildConfiguration: 'Release'
@@ -26,12 +26,6 @@ stages:
         extraProperties: |
           sonar.coverage.exclusions=**/**
           
-    - task: UseDotNet@2
-      displayName: Use .NET 6.0
-      inputs:
-        packageType: 'sdk'
-        version: '6.0.x'
-        
     - task: DotNetCoreCLI@2
       displayName: 'Build solution'
       env: 
@@ -54,13 +48,7 @@ stages:
     variables:
       profile: 'azure'
 
-    steps:          
-    - task: UseDotNet@2
-      displayName: Use .NET 6.0
-      inputs:
-        packageType: 'sdk'
-        version: '6.0.x'
-        
+    steps:        
     - task: DotNetCoreCLI@2
       displayName: 'Run tests'
       retryCountOnTaskFailure: 1
@@ -86,13 +74,7 @@ stages:
       inputs:
         useConfigFile: true
         configFilePath: 'GitVersion.yml'
-                      
-    - task: UseDotNet@2
-      displayName: Use .NET 6.0
-      inputs:
-        packageType: 'sdk'
-        version: '6.0.x'
-
+       
     - script: dotnet pack Aquality.Selenium\src\Aquality.Selenium\Aquality.Selenium.csproj -c $(buildConfiguration) -p:Version=$(GitVersion.NuGetVersion) -o $(Build.ArtifactStagingDirectory)
       displayName: 'Pack to NuGet package'
 
