--- a/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
+++ b/Aquality.Selenium/src/Aquality.Selenium/Aquality.Selenium.csproj
@@ -28,6 +28,8 @@
     <None Remove="Resources\JavaScripts\GetDevicePixelRatio.js" />
     <None Remove="Resources\JavaScripts\GetElementsFromPoint.js" />
     <None Remove="Resources\JavaScripts\GetElementCssSelector.js" />
+    <None Remove="Resources\JavaScripts\OpenInNewWindow.js" />
+    <None Remove="Resources\JavaScripts\OpenNewWindow.js" />
     <None Remove="Resources\JavaScripts\SetAttribute.js" />
     <None Remove="Resources\Localization\be.json" />
     <None Remove="Resources\Localization\en.json" />
@@ -60,7 +62,9 @@
     <EmbeddedResource Include="Resources\JavaScripts\GetViewPortCoordinates.js" />
     <EmbeddedResource Include="Resources\JavaScripts\IsPageLoaded.js" />
     <EmbeddedResource Include="Resources\JavaScripts\MouseHover.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\OpenInNewWindow.js" />
     <EmbeddedResource Include="Resources\JavaScripts\OpenInNewTab.js" />
+    <EmbeddedResource Include="Resources\JavaScripts\OpenNewWindow.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ScrollBy.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ScrollToBottom.js" />
     <EmbeddedResource Include="Resources\JavaScripts\ScrollToElement.js" />
@@ -82,7 +86,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aquality.Selenium.Core" Version="3.0.7" />
+    <PackageReference Include="Aquality.Selenium.Core" Version="3.0.8" />
     <PackageReference Include="OpenCvSharp4.runtime.osx_arm64" Version="4.8.1-rc" />
     <PackageReference Include="WebDriverManager" Version="2.17.2" />
 	<PackageReference Include="OpenCvSharp4" Version="4.9.0.20240103" />
